# openapi.yaml
@@ -284,33 +284,6 @@ paths:
                 '400':
                     description: Bad request, invalid inputs
 
-    /api/users/count:
-        get:
-            summary: Retrieve total user count
-            description: Returns the total number of users or filters based on the `status` query parameter.
-            operationId: getUserCount
-            parameters:
-        - in: query
-          name: status
-          schema:
-            type: string
-            enum: [opted_in, profiled]
-            example: opted_in
-          required: false
-          description: Filter users by status:
-            - `opted_in`: Count of users who have opted in.
-            - `profiled`: Count of users who have completed their profile.
-            - Undefined: Total count of all users.
-            responses:
-                '200':
-                    description: Total user count
-                    content:
-                        application/json:
-                            schema:
-                                type: integer
-                '405':
-                    description: Method not allowed
-
     /api/feedback:
         post:
             summary: Update user feedback
@@ -447,6 +420,31 @@ paths:
         get:
             summary: Retrieve list of users
             description: Returns a list of users after verifying admin privileges.
+            operationId: getUsersByPage
+            parameters:
+                - in: query
+                name: page
+                schema:
+                    type: integer
+                    example: 1
+                required: false
+                description: Page number for pagination.
+                default: 1
+                - in: query
+                name: limit
+                schema:
+                    type: integer
+                    example: 10
+                required: false
+                description: Number of users per page.
+                default: 0
+                - in: query
+                name: searchTerm
+                schema:
+                    type: string
+                    example: John
+                required: false
+                description: Search term to filter users for matching name or email.
             responses:
                 '200':
                     description: List of users retrieved successfully.
@@ -460,6 +458,34 @@ paths:
                     description: Unauthorized access.
                 '403':
                     description: Access forbidden.
+
+    /api/users/count:
+        get:
+            summary: Retrieve total user count
+            description: Returns the total number of users or filters based on the `status` query parameter.
+            operationId: getUserCount
+            parameters:
+                - in: query
+                name: status
+                schema:
+                    type: string
+                    enum: [opted_in, profiled]
+                    example: opted_in
+                required: false
+                description: |
+                    Filter users by status:
+                    - `opted_in`: Count of users who have opted in.
+                    - `profiled`: Count of users who have completed their profile.
+                    - Undefined: Total count of all users.
+            responses:
+                '200':
+                    description: Total user count
+                    content:
+                        application/json:
+                            schema:
+                                type: integer
+                '405':
+                    description: Method not allowed
     /api/admin:
         get:
             summary: Verify admin status
